Fix layout bug with mobile logo list

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -704,6 +704,10 @@ section.logos {
             @include span-columns (10 of 12);
             @include shift(1);
         }
+        @include media($mobile) {
+            @include span-columns (12 of 12);
+            @include shift(0);
+        }
     }
 	li {
         width: 150px;
